Convert excel to doccano file

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -325,11 +325,209 @@
    "source": [
     "pooler_output"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 資料格式轉為 doccano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data_original = pd.read_excel(\"data/raw/TMUH_pathReport_T1-T4_NER.xlsx\")\n",
+    "data_renew = pd.read_excel(\"data/raw/TMUH_pathReport_T1-T4_NER_v.0115.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'part_num', 'Chat No.', 'path_soap', 'path_report',\n",
+       "       'Cytology_report', 'organ', 'Bx-site', 'operation', 'Htype',\n",
+       "       'Greatest dimension', 'tumor_size', 'Tumor_Focality', 'LV_invasion',\n",
+       "       'closest_margin', 'version', 'pT', 'pN', 'pM', 'pStage'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_original.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'part_num', 'Chat No.', 'path_soap', 'path_report',\n",
+       "       'Cytology_report', 'organ', 'Bx-site', 'operation', 'diagnosis',\n",
+       "       'Htype', 'Hgrade', 'Greatest dimension', 'tumor_size', 'Tumor_Focality',\n",
+       "       'LV_invasion', 'closest_margin', 'PDL1_immune', 'PDL1_PN', 'PDL1_TC',\n",
+       "       'PDL1_IC', 'PDL1_TPS', 'PDL1_CPS', 'version', 'pT', 'pN', 'pM',\n",
+       "       'pStage'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_renew.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3042/3042 [00:00<00:00, 10126.27it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import jsonlines\n",
+    "import json\n",
+    "\n",
+    "data_path = \"data/raw/TMUH_pathReport_T1-T4_NER_v.0115.xlsx\"\n",
+    "data = pd.read_excel(data_path)\n",
+    "# data = data.iloc[1380:,:]\n",
+    "\n",
+    "def find_entity(text, target, target_text):\n",
+    "    entities = []\n",
+    "    cur_index = 0\n",
+    "    while text.find(target_text, cur_index) != -1:\n",
+    "        beging = text.find(target_text, cur_index)\n",
+    "        end = beging + len(target_text)\n",
+    "        entities.append([beging, end, target])\n",
+    "        cur_index = end\n",
+    "    return entities\n",
+    "\n",
+    "report_to_targets = {\n",
+    "    \"Cytology_report\": [\"Bx-site\", \"operation\", \"diagnosis\"],\n",
+    "    \"path_soap\": [\"organ\"],\n",
+    "    \"path_report\": [\n",
+    "        \"Hgrade\",\n",
+    "        \"Htype\",\n",
+    "        \"tumor_size\",\n",
+    "        \"Greatest dimension\",\n",
+    "        \"Tumor_Focality\",\n",
+    "        \"LV_invasion\",\n",
+    "        \"closest_margin\",\n",
+    "        \"version\",\n",
+    "        \"pT\",\n",
+    "        \"pN\",\n",
+    "        \"pM\",\n",
+    "        \"pStage\",\n",
+    "        \"PDL1_immune\", \n",
+    "        \"PDL1_PN\", \n",
+    "        \"PDL1_TC\",\n",
+    "        \"PDL1_IC\", \n",
+    "        \"PDL1_TPS\", \n",
+    "        \"PDL1_CPS\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "outputs = []\n",
+    "\n",
+    "for i, row in tqdm(data.iterrows(), total=data.shape[0]):\n",
+    "\n",
+    "    no_match_targets = []\n",
+    "\n",
+    "    for report in [\"Cytology_report\", \"path_soap\", \"path_report\"]:\n",
+    "\n",
+    "        if not pd.isna(row[report]):\n",
+    "\n",
+    "            text = row[report]\n",
+    "            label = []\n",
+    "\n",
+    "            if len(no_match_targets) != 0:\n",
+    "                match_targets = []\n",
+    "                for target in no_match_targets:\n",
+    "                    entities = find_entity(text, target, row[target])\n",
+    "                    if len(entities) != 0:\n",
+    "                        label.extend(entities)\n",
+    "                        match_targets.append(target)\n",
+    "                no_match_targets = [target for target in no_match_targets if target not in match_targets]\n",
+    "\n",
+    "            for target in report_to_targets[report]:\n",
+    "                if not pd.isna(row[target]):\n",
+    "                    entities = find_entity(text, target, row[target])\n",
+    "                    if len(entities) == 0:\n",
+    "                        no_match_targets.append(target)\n",
+    "                    else:\n",
+    "                        label.extend(entities)\n",
+    "            \n",
+    "            label.sort()\n",
+    "            outputs.append({\"id\": row[\"id\"], \"text\": text, \"label\": label})\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            for target in report_to_targets[report]:\n",
+    "                if not pd.isna(row[target]):\n",
+    "                    no_match_targets.append(target)\n",
+    "\n",
+    "    if len(no_match_targets) != 0:\n",
+    "        print(f\"ID {row['id']} has no match targets {no_match_targets}\")\n",
+    "\n",
+    "with jsonlines.open(\"./data/processed/1-1379.jsonl\", \"w\") as writer:\n",
+    "    to_output = [line for line in outputs if line[\"id\"] < 1380]\n",
+    "    reserved = []\n",
+    "    for line in to_output:\n",
+    "        line[\"label\"] = [l for l in line[\"label\"] if l[2].startswith(\"PDL1\")]\n",
+    "        if len(line[\"label\"]) == 0:\n",
+    "            continue\n",
+    "        reserved.append(line)\n",
+    "    for line in reserved:\n",
+    "        writer.write(line)\n",
+    "\n",
+    "with jsonlines.open(\"./data/processed/1380-2210.jsonl\", \"w\") as writer:\n",
+    "    to_output = [line for line in outputs if 1380 <= line[\"id\"] < 2211]\n",
+    "    for line in to_output:\n",
+    "        writer.write(line)\n",
+    "\n",
+    "with jsonlines.open(\"./data/processed/2211-3042.jsonl\", \"w\") as writer:\n",
+    "    to_output = [line for line in outputs if line[\"id\"] >= 2211]\n",
+    "    for line in to_output:\n",
+    "        writer.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('nemo')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -343,12 +541,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5f79b45a4a9179c3d9f58334a0802cab802399d9df1f81be44bc30c7400d9157"
+    "hash": "2d6fa5183e00f3c936181d056ea3ebbe72528ee1c1dfe0fb764a5c25550c30a4"
    }
   }
  },
